--- a/apply-trace/package.json
+++ b/apply-trace/package.json
@@ -13,15 +13,17 @@
     "@auth/prisma-adapter": "^2.7.4",
     "@auth/supabase-adapter": "^1.7.4",
     "@google/generative-ai": "^0.21.0",
+    "@hello-pangea/dnd": "^17.0.0",
     "@prisma/client": "^6.2.1",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.47.12",
+    "date-fns": "^4.1.0",
     "googleapis": "^144.0.0",
     "next": "15.1.4",
     "next-auth": "^4.24.11",
     "prisma": "^6.2.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
