--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,3 @@
 GMAIL_TOPIC_NAME="projects/your-project-id/topics/gmail-notifications" 
+# Google AI (Gemini) API Key
+GEMINI_API_KEY="your-api-key-here" 
