feat: more webhook updates

--- a/apply-trace/package.json
+++ b/apply-trace/package.json
@@ -17,8 +17,10 @@
     "@prisma/client": "^6.2.1",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.47.12",
+    "@types/jsonwebtoken": "^9.0.7",
     "date-fns": "^4.1.0",
     "googleapis": "^144.0.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.1.4",
     "next-auth": "^4.24.11",
     "prisma": "^6.2.1",
