--- a/apply-trace/package.json
+++ b/apply-trace/package.json
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "^2.47.12",
     "@types/jsonwebtoken": "^9.0.7",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "googleapis": "^144.0.0",
     "jsonwebtoken": "^9.0.2",
     "next": "15.1.4",
