--- a/apply-trace/package.json
+++ b/apply-trace/package.json
@@ -7,7 +7,7 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky",
+    "prepare": "cd .. && husky install apply-trace/.husky",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
